# py-fastapi-homework-2-task

./: pyproject.toml
src/routes/: movies.py
src/schemas/: __init__.py  movies.py
